--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background-color: #e5f7ff;
+  background-color: white;
   color: #1e73be;
   padding: 3rem 1rem;
   width: 100%;
@@ -17,31 +17,47 @@ body {
 h2 {
   text-align: center;
   margin-bottom: 0.75rem;
+  font-size: 1.5rem;
 }
 
-.paragraph {
+.welcomeMsg {
   display: flex;
   justify-content: center;
   justify-items: center;
-}
-p {
-  font-size: medium;
-  letter-spacing: 0.5px;
-  text-align: center;
+  font-size: 1rem;
 }
 
-.publics {
+.introContainer {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 0.75rem;
+  margin-top: 2.5rem;
+  padding: 1rem 2rem;
+  border-top: 1px solid #1e73be;
+  border-bottom: 1px solid #1e73be;
+}
+
+.introList {
+  padding-left: 1rem;
+  font-size: 0.825rem;
+}
+
+.introHeading {
+  font-size: 1rem;
+}
+
+.publicRoutesContainer {
   margin-top: 3rem;
   margin-bottom: 3rem;
 }
 
-.publicHeading {
+.routesHeading {
   font-weight: bold;
-  font-size: 1.25rem;
+  font-size: 1rem;
   margin-bottom: 0.75rem;
 }
 
-.publicRoutes {
+.route {
   display: flex;
   justify-content: start;
   justify-items: start;
@@ -63,10 +79,17 @@ p {
   flex-direction: column;
 }
 
+.method {
+  text-transform: uppercase;
+  font-size: 0.825rem;
+}
+
 a {
   text-decoration: none;
-  font-size: 18px;
   color: inherit;
+}
+.url {
+  font-size: 0.825rem;
 }
 
 .routesGrid {
@@ -77,26 +100,12 @@ a {
 
 h5 {
   font-weight: bold;
-  font-size: 16px;
+  font-size: 0.825rem;
   margin-bottom: 0.25rem;
 }
 
 li {
   list-style-type: decimal;
-}
-
-.introContainer {
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 0.5rem;
-  margin-top: 2rem;
-  padding: 1rem 2rem;
-  border-top: 1px solid #1e73be;
-  border-bottom: 1px solid #1e73be;
-}
-
-.introList {
-  padding-left: 1rem;
 }
 
 .linksContainer {
@@ -125,8 +134,59 @@ footer {
   color: #e5f7ff;
 }
 
-.method {
-  text-transform: uppercase;
+/* 404 Page */
+.body404 {
+  display: flex;
+  justify-content: center;
+  justify-items: center;
+  align-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+  background-color: white;
+  color: #1e73be;
+}
+
+.title404 {
+  font-size: 1.5rem;
+  margin-bottom: 0.75rem;
+}
+.homeBtn404 {
+  text-decoration: underline;
+  text-underline-offset: 2.5px;
+  font-weight: bold;
+  font-size: 1rem;
+}
+
+.paragragh404 {
+  font-size: 1rem;
+  margin-bottom: 3rem;
+}
+
+@media only screen and (min-width: 576px) {
+  h2 {
+    font-size: 2.25rem;
+  }
+  .welcomeMsg,
+  .introHeading,
+  .routesHeading {
+    font-size: 1.25rem;
+  }
+  .introList,
+  .method,
+  .url,
+  h5 {
+    font-size: 1rem;
+  }
+
+  /* 404 Page */
+  .title404 {
+    font-size: 1.75rem;
+  }
+  .homeBtn404,
+  .paragragh404 {
+    font-size: 1.125rem;
+  }
 }
 
 @media only screen and (min-width: 450px) and (max-width: 768px) {
@@ -136,7 +196,7 @@ footer {
   }
   .introContainer {
     grid-template-columns: repeat(5, 1fr);
-    gap: 1.5rem;
+    gap: 1.75rem;
     place-content: center;
     place-items: center;
     align-content: center;
@@ -151,6 +211,7 @@ footer {
     max-width: 450px;
   }
 }
+
 @media only screen and (min-width: 769px) and (max-width: 1024px) {
   .routesGrid {
     grid-template-columns: repeat(3, 1fr);
@@ -158,7 +219,7 @@ footer {
   }
   .introContainer {
     grid-template-columns: repeat(5, 1fr);
-    gap: 1.5rem;
+    gap: 1.75rem;
     place-content: center;
     place-items: center;
     align-content: center;
