--- a/style.css
+++ b/style.css
@@ -6,9 +6,21 @@
   box-sizing: border-box;
 }
 
+:root {
+  --title-color: #383f51;
+  --secondary-title-color: #2a3445;
+  --text-color: #606774;
+  --body-color: #fafafa;
+  --cta-color: #00aeff;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
 body {
-  background-color: #e5f7ff;
-  color: #1e73be;
+  background-color: var(--body-color);
+  color: var(--text-color);
   padding: 3rem 1rem;
   width: 100%;
   position: relative;
@@ -18,6 +30,7 @@ h2 {
   text-align: center;
   margin-bottom: 0.75rem;
   font-size: 1.5rem;
+  color: var(--secondary-title-color);
 }
 
 .welcomeMsg {
@@ -33,8 +46,8 @@ h2 {
   gap: 0.75rem;
   margin-top: 2.5rem;
   padding: 1rem 2rem;
-  border-top: 1px solid #1e73be;
-  border-bottom: 1px solid #1e73be;
+  border-top: 1px solid var(--title-color);
+  border-bottom: 1px solid var(--title-color);
 }
 
 .introList {
@@ -44,6 +57,12 @@ h2 {
 
 .introHeading {
   font-size: 1rem;
+  color: var(--secondary-title-color);
+}
+
+.paragraphLink {
+  color: var(--title-color);
+  font-weight: 600;
 }
 
 .publicRoutesContainer {
@@ -55,6 +74,7 @@ h2 {
   font-weight: bold;
   font-size: 1rem;
   margin-bottom: 0.75rem;
+  color: var(--secondary-title-color);
 }
 
 .route {
@@ -63,6 +83,10 @@ h2 {
   justify-items: start;
   flex-direction: row;
   gap: 1rem;
+}
+
+.routeCategory h5 {
+  color: var(--title-color);
 }
 
 .routeMethod {
@@ -128,7 +152,7 @@ li {
 }
 
 footer {
-  background-color: #1e73be;
+  background-color: var(--secondary-title-color);
   position: absolute;
   bottom: 0;
   right: 0;
@@ -136,15 +160,15 @@ footer {
   padding-top: 2rem;
   padding-bottom: 2rem;
   text-align: center;
-  border-top: 2px solid #e5f7ff;
-  color: #e5f7ff;
+  border-top: 2px solid var(--title-color);
+  color: var(--body-color);
 }
 
 .testRoute {
   position: relative;
 }
 .test {
-  background-color: rgb(255, 136, 136);
+  background-color: var(--cta-color);
   font-size: 0.625rem;
   color: white;
   padding: 0.075rem 0.25rem 0.125rem 0.25rem;
@@ -153,6 +177,7 @@ footer {
   position: absolute;
   top: -2px;
   right: -3.75px;
+  color: white;
 }
 
 /* 404 Page */
@@ -164,19 +189,21 @@ footer {
   align-items: center;
   height: 100vh;
   width: 100vw;
-  background-color: white;
-  color: #1e73be;
+  background-color: var(--body-color);
+  color: var(--text-color);
 }
 
 .title404 {
   font-size: 1.5rem;
   margin-bottom: 0.75rem;
+  color: var(--text-color);
 }
 .homeBtn404 {
   text-decoration: underline;
   text-underline-offset: 2.5px;
   font-weight: bold;
   font-size: 1rem;
+  color: var(--cta-color);
 }
 
 .paragragh404 {
