--- a/style.css
+++ b/style.css
@@ -193,6 +193,10 @@ footer {
   color: var(--text-color);
 }
 
+#frontendLink {
+  color: #00aeff;
+}
+
 .title404 {
   font-size: 1.5rem;
   margin-bottom: 0.75rem;
